fixed spacing issue for miss images, timed modal and sound better, fixed display of error messages.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -26,12 +26,13 @@ url("big_noodle_titling_oblique.ttf") format('woff'); }
 
 #content-container {
 	box-shadow: 10px 10px 5px 10px #888888;
+    width: 75%;
 }
 
 /* Navbar Stuffz*/
 
 #navbar {
-	padding: 15px;
+	padding: 0;
     margin-bottom: 2%;
     background: linear-gradient(#d9d9d9, #fff);
     border: 0;
@@ -76,11 +77,17 @@ h2 {
 	font-family: "bignoodle";
 }
 
+
 /* Miss Image */
 .misses {
-	width: 80px;
-	height: 80px;
-	padding: 0;
+	width: 100px;
+	height: 100px;
+	padding-right: 10%;
+    margin-right: 20%;
+}
+
+.misses-col {
+    padding-left: 0;
 }
 
 .misses img {
@@ -132,6 +139,7 @@ h2 {
 }
 
 #modal img {
+    margin-top: 12%;
 	width: 20%;
 	border-radius: 5%;
 }
@@ -158,4 +166,37 @@ h2 {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+
+@media screen and (min-width: 750px) and (max-width: 992px){
+
+     /*Miss Image */
+    .misses {
+        width: 90%;
+        height: 90%;
+        padding-right: 10%;
+    }
+
+    .misses img {
+        max-width: 100%;
+        height: auto;
+        border-radius: 5%;
+    }
+}
+
+@media screen and (max-width: 749px) {
+    /*Miss Image */
+    .misses {
+        width: 30px;
+        height: 30px;
+        padding-right: 10%;
+    }
+
+    .misses img {
+        max-width: 100%;
+        height: auto;
+        border-radius: 5%;
+    }
+
 }
